src/main/java/com/example/gmtask/error/CsvParseException.java
package com.example.gmtask.error;

public class CsvParseException extends RuntimeException {

    public CsvParseException(String message) {
        super(message);
    }
}
